src/objects/Contact_Role__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>Contact_Role__c</referenceTo>
        <relationshipLabel>Contact Role</relationshipLabel>
        <relationshipName>Contact_Role</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Role</relationshipLabel>
        <relationshipName>Contact_Role</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Managing_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Managing Group</label>
        <referenceTo>Managing_Group__c</referenceTo>
        <relationshipLabel>Contact Role</relationshipLabel>
        <relationshipName>Contact_Role</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_Code__c</fullName>
        <label>Role Code</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <label>Role Name</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Type__c</fullName>
        <label>Role Type</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Contact Role</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contact Role</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Role</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>